<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/javasepeti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:gravity="top"
        android:text="@string/javasepeti"
        android:textAppearance="@style/javasepeti" />


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="300dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="93dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="77dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="2dp"
            android:gravity="top|center_horizontal"
            android:text="@string/title"
            android:textAppearance="@style/title" />

        <TextView
            android:id="@+id/as"
            android:layout_width="44dp"
            android:layout_height="33dp"
            android:layout_below="@+id/title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="44dp"
            android:layout_marginTop="5dp"
            android:alpha="0.5"
            android:gravity="top|center_horizontal"
            android:text="@string/as"
            android:textAppearance="@style/as" />


    </RelativeLayout>







    <TextView
        android:id="@+id/have_an_acc"
        android:layout_width="122dp"
        android:layout_height="17dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="600dp"
        android:gravity="center_horizontal|top"
        android:text="@string/have_an_acc"
        android:textAppearance="@style/have_an_acc" />


    <TextView
        android:id="@+id/login_here"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="600dp"
        android:layout_toEndOf="@+id/have_an_acc"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|top"
        android:text="@string/login_here"
        android:textAppearance="@style/login_here"
        android:textColor="@color/purple_500" />



    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vuesax_line"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/arrow_circle_left"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@null" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/customer_card"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/customer_box"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/customer_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/profile_icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/righteous"
            android:text="Customer"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/restaurant_card"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"

        android:layout_alignParentEnd="true"

        android:layout_marginStart="40dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/customer_card"
        android:background="@drawable/restaurant_box"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/restaurant_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/restaurant_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/righteous"
            android:text="Restaurant"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/courier_card"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_card"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="130dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/courier_box"
        android:clickable="true"
        android:focusable="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/courier_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            android:src="@drawable/motorcycle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/righteous"
            android:text="Courier"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


</RelativeLayout>




